--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: Namkyeong # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: namye0n9 # your Twitter handle
+twitter_username: # your Twitter handle
 linkedin_username: # your LinkedIn user name
-scholar_userid: # your Google Scholar ID
+scholar_userid: 88ZqjpwAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
